# AliceVision-NBS

./: .gitignore  .gitmodules  CMakeGetRuntimeDeps.cmake  CMakeLists.txt  NOTES.md  README.md  THIRD_PARTY_LICENSES.md  main.cpp  stub.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci-dependencies.yml
docs/: BUILD_MODULES.md  FIND_MODULES.md  PATCHES.md  POST_CONFIGURE_FIXUPS.md  README.md  THIRD_PARTY_LICENSES.md  UTILS_MODULES.md
